--- a/index.html
+++ b/index.html
@@ -11,12 +11,22 @@
 
   <body>
 
-    <div class="toolbar">
-      <span class="header" role="textbox">
-        My Logo
-      </span>
+      <div class="toolbar">
+        <img class="nav-img" src="C:\Users\Ivan\Desktop\Setup-and-mobile-first\images\Toolbar - Dark - Compact.png">
+        <button class="btn"><i class="bars"></i></button>
+      </div>
+
+    <img class="back-img" src="C:\Users\Ivan\Desktop\Setup-and-mobile-first\images\header-shapes mobile.png" alt="circle">
+
+    <div class="intro">
+      <h1 class="greeting">I'm Ivan<br>Glad to meet <br>you!</h1>
+      <p class="descript">I'm a software developer! I can help you build a product, feature or website look at some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
     </div>
 
-
+    <div class="socials-div">
+      <a class="socials" href="">LET'S CONNECT</a><br>
+      <button class="socials"><img class="media-img" src="C:\Users\Ivan\Desktop\Setup-and-mobile-first\images\social media icons.png"></button>
+    </div>
   </body>
 </html>
+
