--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Portifolio</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="C:\Users\Ivan\Desktop\Setup-and-mobile-first\styles.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
 
   <body>
@@ -16,7 +16,7 @@
         <button class="btn"><i class="bars"></i></button>
       </div>
 
-    <img class="back-img" src="C:\Users\Ivan\Desktop\Setup-and-mobile-first\images\header-shapes mobile.png" alt="circle">
+    <img class="back-img" src="images\header-shapes mobile.png">
 
     <div class="intro">
       <h1 class="greeting">I'm Ivan<br>Glad to meet <br>you!</h1>
@@ -25,7 +25,16 @@
 
     <div class="socials-div">
       <a class="socials" href="">LET'S CONNECT</a><br>
-      <button class="socials"><img class="media-img" src="C:\Users\Ivan\Desktop\Setup-and-mobile-first\images\social media icons.png"></button>
+      <button class="socials">
+        <div class="social-media">
+          <ul>
+            <li class="linkedin"><a href="https://github.com/IvanLudick"><img src="images\Linkedin icon.jpg"></a></li>
+            <li class="gmail"><img src="images\Gmail.jpg"></li>
+            <li class="github"><img src="images\GitHub.jpg"></li>
+            <li class="twitter"><img src="images\Twitter.jpg"></li>
+          </ul>
+        </div>
+      </button>
     </div>
   </body>
 </html>
