--- a/index.html
+++ b/index.html
@@ -12,30 +12,33 @@
   <body>
 
       <div class="toolbar">
-        <img class="nav-img" src="C:\Users\Ivan\Desktop\Setup-and-mobile-first\images\Toolbar - Dark - Compact.png">
+        <div class="toolbar-img">
+        </div>
         <button class="btn"><i class="bars"></i></button>
       </div>
 
-    <img class="back-img" src="images\header-shapes mobile.png">
+  <div class="back-img">
 
-    <div class="intro">
-      <h1 class="greeting">I'm Ivan<br>Glad to meet <br>you!</h1>
-      <p class="descript">I'm a software developer! I can help you build a product, feature or website look at some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
-    </div>
+    
 
+      <div class="intro">
+        <h1 class="greeting">I'm Ivan<br>Glad to meet <br>you!</h1>
+        <p class="descript">I'm a software developer! I can help you build a product, feature or website look at some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
+      </div>
+    
     <div class="socials-div">
       <a class="socials" href="">LET'S CONNECT</a><br>
       <button class="socials">
         <div class="social-media">
           <ul>
-            <li class="linkedin"><a href="https://github.com/IvanLudick"><img src="images\Linkedin icon.jpg"></a></li>
-            <li class="gmail"><img src="images\Gmail.jpg"></li>
-            <li class="github"><img src="images\GitHub.jpg"></li>
-            <li class="twitter"><img src="images\Twitter.jpg"></li>
+            <li class="linkedin"><a href="https://www.linkedin.com/in/ivan-ludick-11a055243/"><img src="images\Linkedin icon.jpg"></a></li>
+            <li class="gmail"><a href="https://smiley20089@gmail.com"><img src="images\Gmail.jpg"></a></li>
+            <li class="github"><a href="https://github.com/IvanLudick"><img src="images\GitHub.jpg"></a></li>
           </ul>
         </div>
       </button>
     </div>
+  </div>
   </body>
 </html>
 
