html, css, js tags changed from flex to float

--- a/index.html
+++ b/index.html
@@ -57,11 +57,15 @@
         <p>A daily selection of privately <br>personalized reads, no accounts or <br>sign-ups required.</p>
 
         <div class="tags">
+
           <ul class="tags-ul">
-            <li class="html-tag">html</li>
-            <li class="css-tag">css</li>
-            <li class="javaScript-tag">javaScript</li>
+
+            <li class="tag">html</li>
+            <li class="tag">css</li>
+            <li class="tag">javaScript</li>
+
           </ul>
+
         </div>
 
         <div class="project">
@@ -90,9 +94,9 @@
 
         <div class="tags">
           <ul class="tags-ul">
-            <li class="html-tag">html</li>
-            <li class="css-tag">css</li>
-            <li class="javaScript-tag">javaScript</li>
+            <li class="tag">html</li>
+            <li class="tag">css</li>
+            <li class="tag">javaScript</li>
           </ul>
         </div>
 
@@ -122,9 +126,9 @@
 
         <div class="tags">
           <ul class="tags-ul">
-            <li class="html-tag">html</li>
-            <li class="css-tag">css</li>
-            <li class="javaScript-tag">javaScript</li>
+            <li class="tag">html</li>
+            <li class="tag">css</li>
+            <li class="tag">javaScript</li>
           </ul>
         </div>
 
@@ -154,9 +158,9 @@
 
         <div class="tags">
           <ul class="tags-ul">
-            <li class="html-tag">html</li>
-            <li class="css-tag">css</li>
-            <li class="javaScript-tag">javaScript</li>
+            <li class="tag">html</li>
+            <li class="tag">css</li>
+            <li class="tag">javaScript</li>
           </ul>
         </div>
 
