about-form start

--- a/index.html
+++ b/index.html
@@ -231,6 +231,27 @@
     </div>
 
   </section>
+
+  <footer class="contact-form">
+
+    <div class="form-bg"></div>
+
+    <div class="from-descript">
+
+      <h2 class="form-title">Contact me</h2>
+      <div class="contact-info">
+        <p>If you have an application you are interested in developing, a feature that you need build or a project that needs coding. I'd love to help with.</p>
+      </div>
+    </div>
+
+    <form action="https://formspree.io/f/{form_id}" method="post">
+      <label for="email">Your Email</label>
+      <input name="Email" id="email" type="email">
+      <button type="submit">Submit</button>
+    </form>
+
+  </footer>
+
   </body>
 </html>
 
