--- a/index.html
+++ b/index.html
@@ -242,14 +242,15 @@
       <div class="contact-info">
         <p>If you have an application you are interested in developing, a feature that you need build or a project that needs coding. I'd love to help with.</p>
       </div>
+      
+      <form class="form-action" action="https://formspree.io/f/{form_id}" method="post">
+        <input name="text" class="lable" placeholder="Yeremias" type="email" maxlength="30" required>
+        <input name="Email" class="lable" placeholder="natajayanj14@gmail.com" id="email" type="email" required>
+        <textarea name="textarea" class="text-area" placeholder="Write your message here" maxlength="500"></textarea>
+        <button type="submit">Submit</button>
+      </form>
+      
     </div>
-
-    <form action="https://formspree.io/f/{form_id}" method="post">
-      <label for="email">Your Email</label>
-      <input name="Email" id="email" type="email">
-      <button type="submit">Submit</button>
-    </form>
-
   </footer>
 
   </body>
