form submit btn changes update

--- a/index.html
+++ b/index.html
@@ -247,7 +247,8 @@
         <input name="text" class="lable" placeholder="Yeremias" type="email" maxlength="30" required>
         <input name="Email" class="lable" placeholder="natajayanj14@gmail.com" id="email" type="email" required>
         <textarea name="textarea" class="text-area" placeholder="Write your message here" maxlength="500"></textarea>
-        <button type="submit">Submit</button>
+        
+        <button type="submit" class="submit-btn">Get in touch</button>
       </form>
       
     </div>
