--- a/index.html
+++ b/index.html
@@ -243,10 +243,10 @@
         <p>If you have an application you are interested in developing, a feature that you need build or a project that needs coding. I'd love to help with.</p>
       </div>
       
-      <form class="form-action" action="https://formspree.io/f/{form_id}" method="post">
+      <form class="form-action" action="https://formspree.io/f/{xyyvrwld}" method="post">
         <input name="text" class="lable" placeholder="Yeremias" type="email" maxlength="30" required>
         <input name="Email" class="lable" placeholder="natajayanj14@gmail.com" id="email" type="email" required>
-        <textarea name="textarea" class="text-area" placeholder="Write your message here" maxlength="500"></textarea>
+        <textarea name="textarea" class="text-area" placeholder="Write your message here" maxlength="500" required></textarea>
         
         <button type="submit" class="submit-btn">Get in touch</button>
       </form>
