work section update to desktop and mobile fix

--- a/index.html
+++ b/index.html
@@ -53,18 +53,19 @@
   <section class="work">
     <div class="tonic-1">
 
-      <div class="tonic-img"></div>
+        <div class="tonic-img"></div>
+
     <div class="text-box">
-      <div class="tonic-text">
+      <div class="tonic-txt">
         <h1 class="tonic-title">Tonic</h1>
 
         <ul class="info">
           <li id="client">CANOPY</li>
           <li id="role">Full stack Dev</li>
-          <li id="date">2022</li>
+          <li id="date">2015</li>
         </ul>
 
-        <p>A daily selection of privately <br>personalized reads, no accounts or <br>sign-ups required.</p>
+        <p>A daily selection of privately personalized reads, no accounts or sign-ups required.</p>
 
         <div class="tags">
 
@@ -87,24 +88,25 @@
       </div>
     </div>
 
-    <div class="tonic-3">
+    <div class="multi-1">
 
       <div class="multi-img"></div>
     <div class="text-box">
-      <div class="tonic-text">
-        <h1 class="tonic-title">Multi-Post <br>Stories</h1>
+      <div class="tonic-txt2">
+        <h1 class="tonic-title">Multi-Post Stories</h1>
 
         <ul class="info">
-          <li id="client">CANOPY</li>
+          <li id="client">FACEBOOK</li>
           <li id="role">Full stack Dev</li>
-          <li id="date">2022</li>
+          <li id="date">2015</li>
         </ul>
 
-        <p>A daily selection of privately <br>personalized reads, no accounts or <br>sign-ups required.</p>
+        <p>Experimental content creation feature that allows users to add to an existing story over the course of a day without spamming their friends.</p>
 
         <div class="tags">
           <ul class="tags-ul">
             <li class="tag">html</li>
+            <li class="tag">Ruby</li>
             <li class="tag">css</li>
             <li class="tag">javaScript</li>
           </ul>
@@ -119,24 +121,25 @@
       </div>
     </div>
 
-    <div class="tonic-1">
+    <div class="tonic-2">
 
       <div class="tonic2-img"></div>
     <div class="text-box">
-      <div class="tonic-text">
-        <h1 class="tonic-title">Tonic</h1>
+      <div class="tonic-txt3">
+        <h1 class="tonic-title">Facebook 360</h1>
 
         <ul class="info">
-          <li id="client">CANOPY</li>
+          <li id="client">FACEBOOK</li>
           <li id="role">Full stack Dev</li>
-          <li id="date">2022</li>
+          <li id="date">2015</li>
         </ul>
 
-        <p>A daily selection of privately <br>personalized reads, no accounts or <br>sign-ups required.</p>
+        <p>Exploring the future of media in Facebook's first Virtual Reality app: a place to discover and enjoy 360 photos and videos on Gear VR.</p>
 
         <div class="tags">
           <ul class="tags-ul">
             <li class="tag">html</li>
+            <li class="tag">Ruby</li>
             <li class="tag">css</li>
             <li class="tag">javaScript</li>
           </ul>
@@ -151,24 +154,25 @@
       </div>
     </div>
 
-    <div class="tonic-3">
+    <div class="multi-2">
 
       <div class="multi2-img"></div>
     <div class="text-box">
-      <div class="tonic-text">
-        <h1 class="tonic-title">Multi-Post <br>Stories</h1>
+      <div class="tonic-txt4">
+        <h1 class="tonic-title">Uber Navigation</h1>
 
         <ul class="info">
-          <li id="client">CANOPY</li>
-          <li id="role">Full stack Dev</li>
-          <li id="date">2022</li>
+          <li id="client">Uber</li>
+          <li id="role">Lead Developer</li>
+          <li id="date">2018</li>
         </ul>
 
-        <p>A daily selection of privately <br>personalized reads, no accounts or <br>sign-ups required.</p>
+        <p>A smart assistant to make driving more safe, efficient, and fun by unlocking your most expensive computer: your car.</p>
 
         <div class="tags">
           <ul class="tags-ul">
             <li class="tag">html</li>
+            <li class="tag">Ruby</li>
             <li class="tag">css</li>
             <li class="tag">javaScript</li>
           </ul>
@@ -208,24 +212,22 @@
     </div>
 
     <div class="skill-list">
-      <div class="language">
+      <!-- <div class="language">
         <p>Languages <img class="vector-down" src="images\Down-icon.png"></img></p>
-      </div>
+      </div> -->
 
       <div class="lang-list">
+        <div class="language">
+          <p>Languages <img class="vector-down" src="images\Down-icon.png"></img></p>
+        </div>
         
-          <div id="lang">
-            <div class="lang-img-js"></div>
-            <div id="lang-txt">JavaScript</div>
-          </div>
-          <div id="lang">
-            <div class="lang-img-html"></div>
-            <div id="lang-txt">HTML</div>
-          </div>
-          <div id="lang">
-            <div class="lang-img-css"></div>
-            <div id="lang-txt">CSS</div>
-          </div>
+        <div class="lang">
+          <ul class="lang-ul">
+            <li class="lang-txt">javaScript</li>
+            <li class="lang-txt">HTML</li>
+            <li class="lang-txt">CSS</li>
+          </ul>
+        </div>
       
       <div class="framework">
         <p>Framework <img class="vector-down" src="images\Right-icon.png"></img></p>
