added mobile menu

--- a/index.html
+++ b/index.html
@@ -7,23 +7,28 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
   </head>
 
   <body>
 
-      <header class="toolbar">
+      <nav class="toolbar">
         
         <div class="toolbar-txt">My Logo</div>
-
+        <a href="#" class="toggle-button">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </a>
         <div class="item-nav">
-          <div class="item-txt">Portifolio</div>
-          <div class="item-txt">About</div>
-          <div class="item-txt">Contact</div>
+          <ul>
+            <li><a href="#">Portifolio</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
         </div>
-        
-        <button class="btn"><i class="bars"></i></button>
 
-      </header>
+      </nav>
 
   <div class="header-section">
 
