--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <div class="item-nav">
           <button class="toggle-2">X</button>
           <ul>
-            <li><a href="#">Portifolio</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#work">Portfolio</a></li>
+            <li><a href="#about-myself">About</a></li>
+            <li><a href="#contact-form">Contact</a></li>
           </ul>
         </div>
 
@@ -58,7 +58,7 @@
     </div>
     </section>
 
-  <section class="work">
+  <section id="work">
     <div class="tonic-1">
 
         <div class="tonic-img"></div>
@@ -197,7 +197,7 @@
 
   </section>
 
-  <section class="about-myself">
+  <section id="about-myself">
 
     <div class="about-me">
       <h1 class="about-title">About <br>Myself</h1>
@@ -262,7 +262,7 @@
 
   </section>
 
-  <footer class="contact-form">
+  <footer id="contact-form">
 
     <div class="form-bg"></div>
 
