menu navigation fixed and desktop button update

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <div class="item-nav">
           <button class="toggle-2">X</button>
           <ul>
-            <li><a href="#work">Portfolio</a></li>
-            <li><a href="#about-myself">About</a></li>
-            <li><a href="#contact-form">Contact</a></li>
+            <li><a href="#work" onclick="closeMenu()">Portfolio</a></li>
+            <li><a href="#about-myself" onclick="closeMenu()">About</a></li>
+            <li><a href="#contact-form" onclick="closeMenu()">Contact</a></li>
           </ul>
         </div>
 
